--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>PERSONAL BLOG</title>
   </head>
   <body>
@@ -45,7 +45,7 @@
               <img src="Images/mac-and-cheese.jpg" alt="Mac-and-Cheese" class="card-img">
               <div class="card-body">
                 <p class="card-title">Mac-and-Cheese Recipie</p>
-                <button class="card-btn"><a href="#" target="_blank">Read More</a></button class="card-btn">
+                <button class="card-btn"><a href="pages/blog-post.html" target="_blank">Read More</a></button class="card-btn">
               </div>
             </div>
             <div class="card">
