blog post oage anf files restructuring

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                 <img src="Images/indian-food.jpg" alt="Random photo" class="card-img">
                 <div class="card-body">
                   <p class="card-title">Indian Food Platter</p>
-                  <button class="card-btn"><a href="#" target="_blank">Read More</a></button>
+                  <button class="card-btn"><a href="pages/blog-post.html" target="_blank">Read More</a></button>
                 </div>
               </div>
               <div class="card">
                 <img src="Images/sushi.jpg" alt="Random photo" class="card-img">
                 <div class="card-body">
                   <p class="card-title">Sushi Recipie</p>
-                  <button class="card-btn"><a href="#" target="_blank">Read More</a></button>
+                  <button class="card-btn"><a href="pages/blog-post.html" target="_blank">Read More</a></button>
                 </div>
               </div>
               </div>
