Added Blog Author and Imported CSS files into style.css

--- a/Pages/blog-post.html
+++ b/Pages/blog-post.html
@@ -29,7 +29,7 @@
                   </div>
         </section>
         <div class="blog-intro">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pellentesque turpis vel molestie bibendum. Donec pulvinar est et erat molestie, a rhoncus nulla ultricies. Curabitur sed suscipit enim, ultrices malesuada massa. Nunc elementum suscipit erat a imperdiet. Vestibulum lacinia erat metus, lacinia ultricies lacus dictum sit amet.</p>
+            <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pellentesque turpis vel molestie bibendum. Donec pulvinar est et erat molestie, a rhoncus nulla ultricies. Curabitur sed suscipit enim, ultrices malesuada massa. Nunc elementum suscipit erat a imperdiet. Vestibulum lacinia erat metus, lacinia ultricies lacus dictum sit amet.</blockquote>
         </div>
        <section>
            
