--- a/Pages/blog-post.html
+++ b/Pages/blog-post.html
@@ -17,7 +17,8 @@
     <div class="container">
         <section class="header">
             <header>
-               Lets Learn different Recipies 
+              <h2>Lets Learn different Recipies </h2> 
+               <a href="../index.html"><button  class="header-button">Return to Home</button></a>
               </header>
               <div class="blog-page">
                 <div class="blog-page-grid">
@@ -34,7 +35,7 @@
        <section>
            
            <div class="blog-ingredients">
-               <h3 class="sub-header">Ingredients</h3>
+               <h3 class="sub-header"><u>Ingredients</u></h3>
                <ul>
                    <li>1 (8 ounce) box elbow macaroni</li>
                        <li>¼ cup butter</li>
@@ -47,19 +48,31 @@
                </ul>
            </div>
            <div class="blog-directions">
-               <h3 class="sub-header">Directions</h3><p class="direction-sub">Bring a large pot of lightly salted water to a boil. Cook elbow macaroni in the boiling water, stirring occasionally until cooked through but firm to the bite, 8 minutes. Drain.<br>Melt butter in a saucepan over medium heat; stir in flour, salt, and pepper until smooth, about 5 minutes. Slowly pour milk into butter-flour mixture while continuously stirring until mixture is smooth and bubbling, about 5 minutes. Add Cheddar cheese to milk mixture and stir until cheese is melted, 2 to 4 minutes. <br>Fold macaroni into cheese sauce until coated.</p>
+               <h3 class="sub-header"><u>Directions</u></h3><p class="direction-sub">Bring a large pot of lightly salted water to a boil. Cook elbow macaroni in the boiling water, stirring occasionally until cooked through but firm to the bite, 8 minutes. Drain.<br>Melt butter in a saucepan over medium heat; stir in flour, salt, and pepper until smooth, about 5 minutes. Slowly pour milk into butter-flour mixture while continuously stirring until mixture is smooth and bubbling, about 5 minutes. Add Cheddar cheese to milk mixture and stir until cheese is melted, 2 to 4 minutes. <br>Fold macaroni into cheese sauce until coated.</p>
         </div>
         <div class="blog-tips">
-            <h3 class="sub-header">Tips</h3>
+            <h3 class="sub-header"><u>Tips</u></h3>
             <p class="sub-tips">You can never have enough cheese, and I usually add an extra half cup without ruining the recipe. Keep a careful eye on the milk when boiling, as milk boils fast and burns easily. Burnt milk will show up in the recipes flavor if overcooked.</p>
         </div>
        </section>
+       <br>
+       <div class="blog-author">
+           <h3 class="sub-header"><u>Blog Author</u></h3>
+        <img src="../Images/avatar.png" alt="" class="Avatar">
+        <h3><i>Mobolade A.</i></h3>
+        <div class="author-about">
+        <p>Head Chef</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Nunc pellentesque turpis vel molestie bibendum. Donec pulvinar est <br> et erat molestie,  a rhoncus nulla ultricies. Curabitur sed suscipit enim,</p>
+        <p>Udacity</p>
+        </div>
+      </div>
+
        <footer class="landing-footer">
         <h1 class="footer-header"> For more Quality Contents, Follow me on my social media accounts</h1>
         <div class="footer-icon">
-        <i class="fab fa-twitter icons"></i>
-        <i class="fab fa-linkedin-in icons"></i>
-        <i class="fab fa-instagram icons"></i>
+            <a href="#"><i class="fab fa-twitter icons"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in icons"></i></a>
+            <a href="#"><i class="fab fa-instagram icons"></i></a>
         </div>
      </footer>
           </div>
