--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
               <footer class="landing-footer">
                  <h1 class="footer-header"> For more Quality Contents, Follow me on my social media accounts</h1>
                  <div class="footer-icon">
-                 <i class="fab fa-twitter icons"></i>
-                 <i class="fab fa-linkedin-in icons"></i>
-                 <i class="fab fa-instagram icons"></i>
+                <a href="#"><i class="fab fa-twitter icons"></i></a>
+                 <a href="#"><i class="fab fa-linkedin-in icons"></i></a>
+                 <a href="#"><i class="fab fa-instagram icons"></i></a>
                  </div>
               </footer>
               </div>
