--- a/Pages/blog-post.html
+++ b/Pages/blog-post.html
@@ -32,7 +32,7 @@
         <div class="blog-intro">
             <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pellentesque turpis vel molestie bibendum. Donec pulvinar est et erat molestie, a rhoncus nulla ultricies. Curabitur sed suscipit enim, ultrices malesuada massa. Nunc elementum suscipit erat a imperdiet. Vestibulum lacinia erat metus, lacinia ultricies lacus dictum sit amet.</blockquote>
         </div>
-       <section>
+       <section class="blog">
            
            <div class="blog-ingredients">
                <h3 class="sub-header"><u>Ingredients</u></h3>
